--- a/Technical Documentation page/.vscode/launch.json
+++ b/Technical Documentation page/.vscode/launch.json
@@ -1,21 +1,28 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "Launch Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
-            "name": "Launch Addition",
-            "request": "launch",
-            "mainClass": "Addition",
-            "projectName": "Technical Documentation page_91fdc470"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "Launch Comparison",
+      "request": "launch",
+      "mainClass": "Comparison",
+      "projectName": "Technical Documentation page_91fdc470"
+    },
+    {
+      "type": "java",
+      "name": "Launch Current File",
+      "request": "launch",
+      "mainClass": "${file}"
+    },
+    {
+      "type": "java",
+      "name": "Launch Addition",
+      "request": "launch",
+      "mainClass": "Addition",
+      "projectName": "Technical Documentation page_91fdc470"
+    }
+  ]
 }
